# RuSseL

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh  compile_flags.txt
src/: Chain.cpp  Contour.cpp  ContourAsymmetric.cpp  ContourHybrid.cpp  ContourSymmetric.cpp  ContourUniform.cpp  Eos.cpp  EosHelfand.cpp  EosSanchezLacombe.cpp  EvalArg.cpp  Evaluator.cpp  Fem.cpp  IOHelper.cpp  Main.cpp  Memory.cpp  Mesh.cpp  Parser.cpp  Russel.cpp  SolverMumps.cpp  StringHelper.cpp  StringOperations.cpp  Variable.cpp  fem.cpp  main.cpp  mesh.cpp  string_helper.cpp
src/include/: Chain.hpp  Constants.hpp  Contour.hpp  ContourAsymmetric.hpp  ContourFlags.hpp  ContourHybrid.hpp  ContourSymmetric.hpp  ContourUniform.hpp  Defaults.hpp  Eos.hpp  EosFlags.hpp  EosHelfand.hpp  EosSanchezLacombe.hpp  EvalArg.hpp  Evaluator.hpp  Fem.hpp  IOHelper.hpp  LinearSystem.hpp  Matrix.hpp  Memory.hpp  Mesh.hpp  MumpsFlags.hpp  Parser.hpp  Russel.hpp  SolverMumps.hpp  StringHelper.hpp  StringOperations.hpp  Variable.hpp  mesh.hpp
